# eliminate_colorful_balloons

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  balloon.cpp  balloon.h  game.cpp  game.h  main.cpp  main.h  put_image.cpp  put_image.h
assets/ballonscreen/: Thumbs.db
include/: easyx.h  graphics.h
lib/x64/: EasyXa.lib  EasyXw.lib
lib/x86/: EasyXa.lib  EasyXw.lib
